--- a/pyproject.toml
+++ b/pyproject.toml
@@ -13,6 +13,7 @@ classifiers = [
 ]
 requires-python = ">=3.11,<3.13"
 dependencies = [
+    "browser-use>=0.1.40",
     "fastapi>=0.104.0",
     "uvicorn>=0.24.0",
     "pydantic>=2.9.2",
