feat: auto-provision AI providers from environment variables
- Add init_provider_from_env() and init_all_providers_from_env() to key_provider.py
- Support DeepSeek, Qwen (DashScope), Moonshot auto-configuration
- Add startup initialization in api/main.py lifespan
- Mount local code files in docker-compose.yml for development
- Providers are auto-created from DEEPSEEK_API_KEY, DASHSCOPE_API_KEY, MOONSHOT_API_KEY

--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -38,6 +38,9 @@ services:
       - MOONSHOT_API_KEY=sk-VqWRgeDnKXIED8kijgueo6jscY9Y5uHTXLWXpOt0Bi6FURzy
     volumes:
       - ./notebook_data:/app/data
+      # Mount local code changes for development
+      - ./open_notebook/ai/key_provider.py:/app/open_notebook/ai/key_provider.py
+      - ./api/main.py:/app/api/main.py
     depends_on:
       - surrealdb
     restart: always
