--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -40,7 +40,10 @@ services:
       - ./notebook_data:/app/data
       # Mount local code changes for development
       - ./open_notebook/ai/key_provider.py:/app/open_notebook/ai/key_provider.py
+      - ./open_notebook/domain/skill.py:/app/open_notebook/domain/skill.py
+      - ./open_notebook/skills:/app/open_notebook/skills
       - ./api/main.py:/app/api/main.py
+      - ./api/routers/skills.py:/app/api/routers/skills.py
     depends_on:
       - surrealdb
     restart: always
