feat: add skill scheduler with cron-based automation
- Add APScheduler dependency for cron-based task scheduling
- Create SkillScheduler class for managing scheduled skill executions
- Integrate scheduler with FastAPI lifespan (startup/shutdown)
- Update skill API routes to sync with scheduler on CRUD operations
- Add scheduler status and management endpoints

Features:
- Cron expression-based scheduling (e.g., '0 * * * *' for hourly)
- Automatic loading of scheduled skills on startup
- Enable/disable scheduling per skill instance
- Next run time tracking
- Execution history and error handling

--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -39,6 +39,7 @@ services:
     volumes:
       - ./notebook_data:/app/data
       # Mount local code changes for development
+      - ./pyproject.toml:/app/pyproject.toml
       - ./open_notebook/ai/key_provider.py:/app/open_notebook/ai/key_provider.py
       - ./open_notebook/domain/skill.py:/app/open_notebook/domain/skill.py
       - ./open_notebook/skills:/app/open_notebook/skills
