--- a/pyproject.toml
+++ b/pyproject.toml
@@ -40,6 +40,7 @@ dependencies = [
     "podcast-creator>=0.9,<1",
     "surreal-commands>=1.3.1,<2",
     "numpy>=2.4.1",
+    "apscheduler>=3.10.4",
 ]
 
 [tool.setuptools]
