--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -39,12 +39,17 @@ services:
     volumes:
       - ./notebook_data:/app/data
       # Mount local code changes for development
-      - ./pyproject.toml:/app/pyproject.toml
+      - ./open_notebook/skills:/app/open_notebook/skills
       - ./open_notebook/ai/key_provider.py:/app/open_notebook/ai/key_provider.py
       - ./open_notebook/domain/skill.py:/app/open_notebook/domain/skill.py
-      - ./open_notebook/skills:/app/open_notebook/skills
       - ./api/main.py:/app/api/main.py
       - ./api/routers/skills.py:/app/api/routers/skills.py
+      - ./scripts/install-deps.sh:/app/scripts/install-deps.sh
+    # Install dependencies on startup, then run the original command
+    command: >
+      bash -c "chmod +x /app/scripts/install-deps.sh &&
+               /app/scripts/install-deps.sh &&
+               /usr/bin/supervisord -c /etc/supervisor/conf.d/supervisord.conf"
     depends_on:
       - surrealdb
     restart: always
