--- a/pyproject.toml
+++ b/pyproject.toml
@@ -41,6 +41,8 @@ dependencies = [
     "surreal-commands>=1.3.1,<2",
     "numpy>=2.4.1",
     "apscheduler>=3.10.4",
+    "playwright>=1.58.0",
+    "beautifulsoup4>=4.14.3",
 ]
 
 [tool.setuptools]
