--- a/pyproject.toml
+++ b/pyproject.toml
@@ -43,6 +43,9 @@ dependencies = [
     "apscheduler>=3.10.4",
     "playwright>=1.58.0",
     "beautifulsoup4>=4.14.3",
+    "croniter>=6.0.0",
+    "asyncpg>=0.31.0",
+    "psycopg2-binary>=2.9.11",
 ]
 
 [tool.setuptools]
