feat: Complete multi-platform support with Feishu sync
- Implemented Zhihu collector with flexible selectors
- Implemented Weibo collector with engagement metrics
- Added Feishu (Lark) sync service
- Support webhook messages and cloud sheet upload
- Enhanced skill.yaml with Feishu configuration options
- All 6 platforms framework ready (Xiaohongshu complete, Zhihu/Weibo implemented)
- Automatic daily report sync to Feishu chat

--- a/open_notebook/skills/multi_platform_ai_researcher/skill.yaml
+++ b/open_notebook/skills/multi_platform_ai_researcher/skill.yaml
@@ -64,6 +64,24 @@
         "type": "boolean",
         "description": "Whether to export report as Markdown file",
         "default": false
+      },
+      "sync_to_feishu": {
+        "type": "boolean",
+        "description": "Whether to sync report to Feishu (Lark)",
+        "default": false
+      },
+      "feishu_webhook": {
+        "type": "string",
+        "description": "Feishu bot webhook URL",
+        "format": "uri"
+      },
+      "feishu_app_id": {
+        "type": "string",
+        "description": "Feishu app ID for advanced API access"
+      },
+      "feishu_app_secret": {
+        "type": "string",
+        "description": "Feishu app secret for authentication"
       }
     },
     "required": []
