feat: Create Daily Briefing System for OPC & OpenClaw & AI Coding
🎯 Deliverables:

New Files Created:
1. open_notebook/skills/daily_briefing_collector.py (182 lines)
   - Multi-platform content collector
   - Supports: Xiaohongshu, Zhihu, Douyin, GitHub
   - Relevance scoring and filtering

2. open_notebook/skills/email_service.py (428 lines)
   - HTML email generator with beautiful template
   - SMTP email sender
   - Responsive design for mobile/desktop

3. open_notebook/skills/daily_briefing_scheduler.py (218 lines)
   - Automated daily scheduler using schedule library
   - Configurable send time (default: 08:00)
   - CLI interface for easy usage

4. Modified Files:
   - open_notebook/skills/__init__.py - Export new modules
   - .env.example - Add email configuration template

Key Features:
✅ Automatic content collection from multiple platforms
✅ AI-powered relevance scoring
✅ Top 10 filtering
✅ Beautiful HTML email template (responsive design)
✅ Scheduled daily delivery (configurable time)
✅ QQ Mail integration ready
✅ CLI interface for testing and manual execution

Usage:

1. Configure environment variables:
   SMTP_SERVER=smtp.qq.com
   SMTP_PORT=465
   SMTP_USERNAME=your_qq_email@qq.com
   SMTP_PASSWORD=your_smtp_auth_code
   BRIEFING_RECIPIENT=1300893414@qq.com
   BRIEFING_SEND_TIME=08:00

2. Run once manually:
   python -m open_notebook.skills.daily_briefing_scheduler --once

3. Start automated scheduler:
   python -m open_notebook.skills.daily_briefing_scheduler

Test Results:
✅ Collector tested successfully (4 items collected)
✅ HTML email generated (email_preview.html)
✅ All modules imported without errors

--- a/.env.example
+++ b/.env.example
@@ -55,5 +55,22 @@ SURREAL_DATABASE=open_notebook
 # BASIC_AUTH_USERNAME=admin
 # BASIC_AUTH_PASSWORD=secret
 
+# =============================================================================
+# OPTIONAL: Daily Briefing Email Configuration
+# =============================================================================
+# Configure SMTP settings for automated daily briefing emails
+
+# SMTP Server Settings (QQ Mail Example)
+# SMTP_SERVER=smtp.qq.com
+# SMTP_PORT=465
+# SMTP_USERNAME=your_qq_email@qq.com  # Your QQ email address
+# SMTP_PASSWORD=your_smtp_auth_code    # SMTP authorization code (not email password)
+
+# Briefing Recipient
+# BRIEFING_RECIPIENT=1300893414@qq.com
+
+# Briefing Send Time (HH:MM format, default: 08:00)
+# BRIEFING_SEND_TIME=08:00
+
 # For more configuration options, see:
 # https://github.com/lfnovo/open-notebook/blob/main/docs/5-CONFIGURATION/environment-reference.md
